# GameEngine

./: CMakeLists.txt  README.md
dependency/includes/assimp/: config.h.in
dependency/includes/glad/: glad.c  glad.h
dependency/includes/glm/gtc/: matrix_transform.hpp
dependency/includes/stb/: stb_image.h
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Debug/: Debug.cpp  Debug.h
src/Error/: Error.cpp  Error.h
src/GLShaders/: phong.vert  phong_textured.frag
src/Game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  IRenderable.h  IUpdatable.h  Time.cpp  Time.h
src/Game/Camera/: Camera.cpp  Camera.h
src/Game/Input/: Input.cpp  Input.h  InputKey.h  KeyState.h
src/Game/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Game/Material/: BasicMaterial.cpp  BasicMaterial.h  ColorMaterial.cpp  ColorMaterial.h  LightMaterial.cpp  LightMaterial.h  ShinyMaterial.cpp  ShinyMaterial.h  TextureMaterial.cpp  TextureMaterial.h
src/Game/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.cpp  Vertex.h
src/Game/Scene/: Scene.cpp  Scene.h
src/Game/Screen/: Screen.cpp  Screen.h
src/Game/Texture/: Texture2D.cpp  Texture2D.h  TextureFiltration.h  TextureWrap.h
src/ManagersSystem/: AbstractManager.cpp  AbstractManager.h  GameManager.cpp  GameManager.h  IGameManager.h  ManagerState.h  Managers.cpp  Managers.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h
src/Shader/: Shader.cpp  Shader.h  ShaderHash.cpp  ShaderHash.h  ShaderType.h
src/utils/: utils.cpp  utils.h
